<resources>
    <string name="app_name">Emory</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signUp">Sign up</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="Signup_message">Join to save your data with Emory!</string>
    <string name="nickname">Enter new nickname:</string>
    <string name="age">Age</string>
    <string name="cancel">Cancel</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="month">This month</string>
    <string name="date">Today</string>
    <string name="greeting">How are you?</string>
    <string name="calendar">Today</string>
    <string name="question">What have you been up to?</string>
    <string name="note">Note</string>
    <string name="add_note">Add Note...</string>
    <string name="photo">Photo</string>
    <string name="draw">Draw</string>
    <string name="family">family</string>
    <string name="friend">friends</string>
    <string name="love">love</string>
    <string name="exercise">exercise</string>
    <string name="sport">sport</string>
    <string name="travel">travel</string>
    <string name="movies">movies</string>
    <string name="gaming">gaming</string>
    <string name="cleaning">cleaning</string>
    <string name="sleep">sleep</string>
    <string name="shopping">shopping</string>
    <string name="eat">eat</string>
    <string name="study">study</string>
    <string name="work">work</string>
    <string name="celebration">celebrations</string>
    <string name="save">Save</string>
    <string name="dateTodo">28, Jan</string>
    <string name="todo">To Do List</string>
    <string name="addAction">Add Activity</string>
    <string name="Enter">Enter Activity...</string>
    <string name="Nickname">Nickname</string>
    <string name="editnickname">Change nickname</string>
    <string name="editpassword">Change password</string>
    <string name="set_reminder">Set reminder</string>
    <string name="group5">Group 5</string>
    <string name="giang">Giang</string>
    <string name="my">My</string>
    <string name="subash">Subash</string>
    <string name='icon_good'>Good</string>
    <string name='icon_happy'>Happy</string>
    <string name='icon_excited'>Excited</string>
    <string name='icon_sad'>Sad</string>
    <string name='icon_awful'>Awful</string>
    <string name='icon_terrible'>Terrible</string>
    <string name="take_photo_icon">Take Photo</string>
    <string name="open_gallery_icon">Open Gallery</string>
    <string name="nameTodo">Name</string>
    <string name="addTodobutton">Add</string>
    <string name="deadlineTodo">Deadline</string>
    <string name="noteTodo">Note</string>
    <string name="moodCountTitle">Mood Count</string>
    <string name="moodGraphTitle">Mood Graph</string>
    <string name="editDetails">Edit</string>
    <string name="error_message">Error</string>
    <string name="zero">Terrible: 0</string>
    <string name="one">Awful: 1</string>
    <string name="two">Sad: 2</string>
    <string name="three">Good: 3</string>
    <string name="four">Happy: 4</string>
    <string name="five">Excited: 5</string>
    <string name="mood_index">Mood index:</string>
    <string name="note_title">Note</string>
    <string name="text_title">Text Title</string>
    <string name="emory">E M O R Y</string>
    <string name="choose_time">Choose time!</string>
    <string name="error_name">Please fill in your name!</string>
    <string name="error_age">Please check your age again!</string>
    <string name="error_email">Please provide a valid email!</string>
    <string name="change_nickname">Change nickname</string>
    <string name="your_nickname">Current nickname:</string>
    <string name="button_change">Change</string>
    <string name="change_password">Change password</string>
    <string name="new_password">Enter your new password:</string>
    <string name="confirm_password">Confirm your password:</string>
    <string name="settings">Settings</string>
</resources>
