<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/highlight"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="313dp"
            android:layout_height="79dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/Signup_message"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/black">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="textWebPassword"
            android:textColor="@color/black">

        </EditText>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp">

        </Button>
    </LinearLayout>
</ScrollView>