<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/highlight">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:id="@+id/edNewPw"
        android:textColor="@color/black"
        android:inputType="textWebPassword"
        android:background="@drawable/edit_text_shape"
        android:layout_marginRight="16dp">

    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:textColor="@color/black"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:id="@+id/edConfirmPw"
        android:inputType="textWebPassword"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_shape"
        android:layout_marginRight="16dp">

    </EditText>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_radius"
        android:text="@string/button_change"
        android:textColor="@color/primary">

    </Button>
</LinearLayout>