<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/secondary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/ava"
            android:layout_width="92dp"
            android:layout_height="88dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_weight="0.3"
            android:src="@drawable/good"
            app:tint="@color/diaryText" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:fontFamily="serif"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/Nickname"
            android:textColor="@color/diaryText"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/changeNickname"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:drawableStart="@drawable/outline_person_pin_black_18dp"
        android:drawableEnd="@drawable/baseline_play_arrow_black_18dp"
        android:drawableTint="@color/icon"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/editnickname"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@color/highlight"
        android:drawableStart="@drawable/outline_manage_accounts_black_18dp"
        android:drawableEnd="@drawable/baseline_play_arrow_black_18dp"
        android:drawableTint="@color/icon"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/editpassword"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeNickname" />

    <Button
        android:id="@+id/setAlarm"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_add_alert_black_18dp"
        android:drawableEnd="@drawable/baseline_play_arrow_black_18dp"
        android:drawableTint="@color/icon"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/set_reminder"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/highlight"
        android:gravity="center"
        android:text="@string/group5"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setAlarm"
        app:layout_constraintVertical_bias="0.231" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/giang"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/subash"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_bar">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>