<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/secondary"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:layout_width="98dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/happy"
            app:tint="@color/happy">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:fontFamily="serif"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:id="@+id/edLoginEmail"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_shape">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:id="@+id/edLoginPassword"
            android:textColor="@color/black"
            android:inputType="textWebPassword"
            android:background="@drawable/edit_text_shape"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp">

            </Button>
        </LinearLayout>

    </LinearLayout>
</ScrollView>