<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".AddTodoActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primary"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/todo"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="620dp"
        android:background="@drawable/shape_radius_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <EditText
            android:id="@+id/nameTodoEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/nameTodo"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/icon"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052" />

        <EditText
            android:id="@+id/noteEditText"
            android:layout_width="336dp"
            android:layout_height="102dp"
            android:ems="10"
            android:hint="@string/noteTodo"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/icon"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.379" />

        <Button
            android:id="@+id/addTodo"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:background="@drawable/button_radius"
            android:gravity="center"
            android:text="@string/addTodobutton"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteEditText"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/deadlineEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:drawableStart="@drawable/ic_calendar_black"
            android:drawableLeft="@drawable/ic_calendar_black"
            android:drawablePadding="5dp"
            android:onClick="onCalendarClick"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/calendar"
            android:textColor="@color/icon"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/noteEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTodoEditText"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>